--- a/_content/config.yml
+++ b/_content/config.yml
@@ -1,7 +1,19 @@
 site:
-  title: 'My New Website'
-  description: 'A website recently generated with PieCrust.'
-  author: jqno
-  pretty_urls: false
+    title: Website Title
+    description: hola!
+    author: Anonymous
+    pretty_urls: false
+    twitter_handle: hardfire
+    twitter_follow: true
+    
 smartypants:
-  enable: true
+    enable: true
+
+baker:
+    skip_patterns:
+        - /^index.php/
+
+#sass config
+sass:
+    load_paths: [templates/sass]
+
