Added Google Analytics

--- a/_content/config.yml
+++ b/_content/config.yml
@@ -4,6 +4,7 @@ site:
     author: Anonymous
     pretty_urls: false
     blogs: [ post, concerten ]
+    analytics: UA-26048593-1
     twitter_handle: jqno
     twitter_follow: true
     
