Created a tag cloud

--- a/_content/config.yml
+++ b/_content/config.yml
@@ -11,7 +11,15 @@ site:
     twitter_follow: true
 
 post:
+    tagcloud_lower: 3
+    tagcloud_upper: 8
     feed_url: http://feeds.feedburner.com/trouwens
+
+concerts:
+    tagcloud_lower: 2
+    tagcloud_upper: 5
+    catcloud_lower: 2
+    catcloud_upper: 7
 
 smartypants:
     enable: true
