--- a/_content/config.yml
+++ b/_content/config.yml
@@ -1,6 +1,7 @@
 site:
     title: tr ouwens
     description: by the way: things I want to say
+    meta_description: This is my blog on software development and (sometimes) other things.
     author: Jan Ouwens
     pretty_urls: true
     posts_per_page: 0
