HTTP meta description for EqualsVerifier site

--- a/site/_content/config.yml
+++ b/site/_content/config.yml
@@ -29,6 +29,7 @@ blogs:
     equalsverifier:
         title: EqualsVerifier
         description: testing equals and hashCode
+        meta_description: EqualsVerifier is a Java tool that can be used in unit tests. It verifies whether the contract for the equals and hashCode methods is met.
         analytics: UA-10447367-2
         feed_url: http://feeds.feedburner.com/trouwens
 
